--- a/saas.html
+++ b/saas.html
@@ -1,90 +1,107 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SaaS Website</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+<title>SaaS Website</title>
+<script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100">
-
-<div class="flex justify-between items-center p-4 bg-white shadow">
-  <h1 class="text-xl font-bold">MySaaS</h1>
-  <div>
-    <a class="mr-4">Home</a>
-    <a class="mr-4">Features</a>
-    <a class="mr-4">Pricing</a>
-    <a>Login</a>
+<body class="bg-slate-900 text-white font-sans">
+<div class="flex justify-between items-center px-12 py-6">
+  <h1 class="text-2xl font-bold text-blue-400">TaskFlow</h1>
+  <div class="space-x-8 text-sm text-gray-300">
+    <a href="#home">Home</a>
+    <a href="#features">Features</a>
+    <a href="#pricing">Pricing</a>
+    <a href="#contact">Contact</a>
   </div>
+  <button class="bg-blue-500 px-5 py-2 rounded-md">Sign Up</button>
 </div>
-<div class="text-center mt-16">
-  <h2 class="text-3xl font-bold">Simple SaaS Platform</h2>
-  <p class="mt-3">Manage your work online easily</p>
-  <button class="bg-blue-500 text-white px-6 py-2 mt-5">
-    Get Started
-  </button>
-</div>
-<div class="mt-20 px-10">
-  <h2 class="text-2xl font-bold text-center mb-10">Features</h2>
-
-  <div class="flex justify-around">
-    <div class="border p-4 w-48 bg-white">
-      <h3 class="font-bold">Easy Login</h3>
-      <p class="mt-2 text-sm">Simple user authentication</p>
-    </div>
-    <div class="border p-4 w-48 bg-white">
-      <h3 class="font-bold">Dashboard</h3>
-      <p class="mt-2 text-sm">User friendly dashboard</p>
-    </div>
-    <div class="border p-4 w-48 bg-white">
-      <h3 class="font-bold">Secure</h3>
-      <p class="mt-2 text-sm">Basic security provided</p>
+<section id="home" class="px-12 py-20 flex items-center">
+  <div class="w-1/2">
+    <h2 class="text-5xl font-bold leading-tight">
+      Simple SaaS Platform<br>
+      For Modern Teams
+    </h2>
+    <p class="mt-6 text-gray-400 max-w-md">
+      TaskFlow helps teams manage tasks, track progress and
+      collaborate better using one clean dashboard.
+    </p>
+    <div class="mt-8 space-x-4">
+      <button class="bg-blue-500 px-6 py-3 rounded-md">Free Trial</button>
+      <button class="border border-blue-400 px-6 py-3 rounded-md">View Demo</button>
     </div>
   </div>
-</div>
-<div class="mt-20 bg-white p-10">
-  <h2 class="text-2xl font-bold text-center">About Us</h2>
-  <p class="mt-5 text-center">
-    This SaaS application is designed to help users
-    manage tasks and meetings efficiently.
-    It is simple and easy to use.
+  <div class="w-1/2 flex justify-center">
+    <div class="bg-slate-800 w-96 h-56 rounded-lg"></div>
+  </div>
+</section>
+<section id="features" class="px-12 py-24 bg-slate-800">
+  <h3 class="text-4xl font-bold text-center">Features</h3>
+  <p class="text-center text-gray-400 mt-4">
+    Designed for productivity and growth
   </p>
-</div>
-<div class="mt-20">
-  <h2 class="text-2xl font-bold text-center">Pricing</h2>
-  <div class="flex justify-center mt-8">
-    <div class="border p-5 m-3 bg-white">
-      <h3 class="font-bold">Free</h3>
-      <p class="mt-2">₹0 / month</p>
+  <div class="grid grid-cols-3 gap-8 mt-16">
+    <div class="bg-slate-900 p-6 rounded-lg">
+      <h4 class="text-lg font-semibold text-blue-400">Task Management</h4>
+      <p class="text-sm text-gray-400 mt-3">
+        Create, assign and track tasks easily.
+      </p>
     </div>
-    <div class="border p-5 m-3 bg-white">
-      <h3 class="font-bold">Premium</h3>
-      <p class="mt-2">₹499 / month</p>
+    <div class="bg-slate-900 p-6 rounded-lg">
+      <h4 class="text-lg font-semibold text-blue-400">Team Collaboration</h4>
+      <p class="text-sm text-gray-400 mt-3">
+        Communicate and work together in real time.
+      </p>
+    </div>
+    <div class="bg-slate-900 p-6 rounded-lg">
+      <h4 class="text-lg font-semibold text-blue-400">Reports</h4>
+      <p class="text-sm text-gray-400 mt-3">
+        Generate weekly and monthly performance reports.
+      </p>
     </div>
   </div>
-</div>
-<div class="mt-20 bg-white p-10">
-  <h2 class="text-xl font-bold text-center">Contact Us</h2>
-  <form class="w-64 mx-auto mt-5">
-    <input class="border w-full p-2 mb-3" placeholder="Name">
-    <input class="border w-full p-2 mb-3" placeholder="Email">
-    <textarea class="border w-full p-2 mb-3" placeholder="Message"></textarea>
-    <button class="bg-blue-500 text-white w-full p-2">
-      Send
-    </button>
-  </form>
-</div>
-<div class="mt-20">
-  <h2 class="text-center font-bold text-xl">Login</h2>
-
-  <div class="w-60 mx-auto mt-5 bg-white p-5 border">
-    <input class="border w-full p-2 mb-3" placeholder="Username">
-    <input class="border w-full p-2 mb-3" placeholder="Password">
-    <button class="bg-green-500 text-white w-full p-2">
-      Login
+</section>
+<section id="pricing" class="px-12 py-24">
+  <h3 class="text-4xl font-bold text-center">Pricing</h3>
+  <p class="text-center text-gray-400 mt-4">
+    Affordable plans for every team
+  </p>
+  <div class="flex justify-center gap-10 mt-16">
+    <div class="bg-slate-800 p-8 rounded-lg w-64 text-center">
+      <h4 class="font-semibold text-lg">Basic</h4>
+      <p class="text-3xl font-bold mt-4">₹0</p>
+      <p class="text-sm text-gray-400 mt-2">Individual users</p>
+      <button class="mt-6 bg-blue-500 px-6 py-2 rounded-md">Start</button>
+    </div>
+    <div class="bg-slate-800 p-8 rounded-lg w-64 text-center">
+      <h4 class="font-semibold text-lg">Pro</h4>
+      <p class="text-3xl font-bold mt-4">₹499</p>
+      <p class="text-sm text-gray-400 mt-2">Small teams</p>
+      <button class="mt-6 bg-blue-500 px-6 py-2 rounded-md">Buy</button>
+    </div>
+    <div class="bg-slate-800 p-8 rounded-lg w-64 text-center">
+      <h4 class="font-semibold text-lg">Enterprise</h4>
+      <p class="text-3xl font-bold mt-4">₹999</p>
+      <p class="text-sm text-gray-400 mt-2">Large teams</p>
+      <button class="mt-6 bg-blue-500 px-6 py-2 rounded-md">Contact</button>
+    </div>
+  </div>
+</section>
+<section id="contact" class="px-12 py-20 bg-slate-800">
+  <h3 class="text-3xl font-bold text-center">Contact Us</h3>
+  <div class="max-w-md mx-auto mt-10">
+    <input type="text" placeholder="Name"
+      class="w-full mb-4 px-4 py-2 rounded bg-slate-900 text-white">
+    <input type="email" placeholder="Email"
+      class="w-full mb-4 px-4 py-2 rounded bg-slate-900 text-white">
+    <textarea placeholder="Message"
+      class="w-full mb-4 px-4 py-2 rounded bg-slate-900 text-white"></textarea>
+    <button class="w-full bg-blue-500 py-2 rounded-md">
+      Send Message
     </button>
   </div>
-</div>
-<div class="mt-20 bg-gray-800 text-white text-center p-4">
-  <p>© 2025 MySaaS Application</p>
+</section>
+<div class="text-center text-gray-500 text-sm py-6 bg-slate-900">
+  © 2025 TaskFlow SaaS Project
 </div>
 </body>
 </html>
